[gd_scene load_steps=6 format=3 uid="uid://1comixqflbsm"]

[ext_resource type="Texture2D" uid="uid://cr5r12lliprxv" path="res://Iconos/Logo.png" id="1_6vouq"]
[ext_resource type="Theme" uid="uid://dir05eos2th8d" path="res://Tema/Tema Base.tres" id="1_7ymoi"]
[ext_resource type="Script" path="res://Scripts/MenuPrincipal/menu_principal.gd" id="1_gbq1l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scc2i"]
draw_center = false
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.686275, 0.686275, 0.686275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a640d"]
bg_color = Color(0.203922, 0.203922, 0.203922, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.788235, 0.788235, 0.788235, 1)

[node name="MenuPrincipal" type="Control" node_paths=PackedStringArray("listaPersonajes")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_7ymoi")
script = ExtResource("1_gbq1l")
listaPersonajes = NodePath("MarginContainer/VBoxContainer/ContPersonajes/ScrollPersonajes/Personajes")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -362.0
offset_top = -642.0
offset_right = 362.0
offset_bottom = 640.0
color = Color(0, 0.00392157, 0.0509804, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = -358.0
offset_top = -640.0
offset_right = 358.0
offset_bottom = 638.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="CabezaTitulo" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scc2i")

[node name="ContTitulo" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CabezaTitulo"]
layout_mode = 2
alignment = 1

[node name="Logo" type="TextureRect" parent="MarginContainer/VBoxContainer/CabezaTitulo/ContTitulo"]
layout_mode = 2
texture = ExtResource("1_6vouq")

[node name="Titulo" type="Label" parent="MarginContainer/VBoxContainer/CabezaTitulo/ContTitulo"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "DND Creador de Personajes"
horizontal_alignment = 1

[node name="ContPersonajes" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a640d")

[node name="ScrollPersonajes" type="ScrollContainer" parent="MarginContainer/VBoxContainer/ContPersonajes"]
custom_minimum_size = Vector2(600, 700)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="Personajes" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContPersonajes/ScrollPersonajes"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CrearPersonaje" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Crear Personaje"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
text = "Ver: 1.3.0"
horizontal_alignment = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CrearPersonaje" to="." method="_on_crear_personaje_pressed"]
